--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto ">
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="artistas.html">ARTISTAS</a>
-          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="About_Us.html">SOBRE NOSOTROS</a>
+          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="about_us.html">SOBRE NOSOTROS</a>
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="merchstore.html">MERCH</a>
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="contact.html">CONTACTANOS</a>
         </div>
