--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto ">
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="artistas.html">ARTISTAS</a>
-          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="About_Us.html">SOBRE NOSOTROS</a>
+          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="about_us.html">SOBRE NOSOTROS</a>
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="merchstore.html">MERCH</a>
-          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="contact.html">CONTACTANOS</a>
+          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="contact.html">CONCURSO</a>
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
           <p class="fs-5 pe-lg-5">Cuando el Museo de Arte Moderno comenzó a exponer sus obras, gran parte del público de
             aquella época despreciaba el cubismo y el arte abstracto, porque chocaban con las líneas directrices que
             hasta ese momento marcaban la pauta del "verdadero arte".</p>
-          <a href="About_Us.html" target="_blank"><button type="button"
+          <a href="about_us.html" target="_blank"><button type="button"
               class="btn botonamarillo">LEER MÁS</button></a>
         </div>
         <div class="col-md-12 col-lg-6 mt-2">
