--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="artistas.html">ARTISTAS</a>
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="about_us.html">SOBRE NOSOTROS</a>
           <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="merchstore.html">MERCH</a>
-          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="contact.html">CONTACTANOS</a>
+          <a class="nav-link navboton py-3 px-3 my-0 mx-0" href="contact.html">CONCURSO</a>
         </div>
       </div>
     </div>
