--- a/about_us.html
+++ b/about_us.html
@@ -150,7 +150,7 @@
             <h2 class=" fw-bold display-2"> Queres ver mas del MOMA?</h2>
             <p class="fs-3 text-muted"> Descubrí lo que esta pasando en el museo hoy, nuevas muestras. Nuevas muestras y
                 nuevas experiencias te esperan!</p>
-            <a href="https://www.tebeosfera.com/autores/ichikawa_haruko.html" target="_blank"><button type="button"
+            <a href="index.html" target="_blank"><button type="button"
                     class="btn botonamarillo mt-3 px-5.
                 ">VER MÁS<Sect></Sect></button></a>
         </div>
